Add cesecore-ejb test code and fix eclipse warnings.